<resources>
    <!-- App Name [NO TRANSLATION]-->
    <string name="app_name">Card Game Counter</string>

    <!--Button strings [CHAR LIMIT=15]-->
    <string name="startButton">GET STARTED</string>
    <string name="nextButton">NEXT</string>
    <string name="minus10Button" translatable="false">-10</string>
    <string name="plusGameButton">+1 GAME</string>
    <string name="undoButton">UNDO</string>
    <string name="resetButton">RESET</string>
    <string name="noButton">NO</string>
    <string name="yesButton">YES</string>
    <string name="okButton">OK</string>
    <string name="keepButton">KEEP</string>

    <!--Cabron Button strings [NO TRANSLATION]-->
    <string name="cabron1Button" translatable="false">C</string>
    <string name="cabron2Button" translatable="false">A</string>
    <string name="cabron3Button" translatable="false">B</string>
    <string name="cabron4Button" translatable="false">R</string>
    <string name="cabron5Button" translatable="false">O</string>
    <string name="cabron6Button" translatable="false">N</string>
    <string name="cabronAccentMarkButton" translatable="false">´</string>
    <string name="cabronFeminineMarkButton" translatable="false">A</string>

    <!--Selection strings [CHAR LIMIT=30]-->
    <string name="select">Select your game</string>
    <string name="selectPlayers">Select your players</string>
    <string name="selectGoal">Select your goal</string>
    <string name="selectReclosures">Select number of reclosures</string>

    <!--Games strings-->
    <!--[NO TRANSLATION]-->
    <string name="chinchon" translatable="false">chinchón</string>
    <string name="cabron" translatable="false">tute cabrón</string>
    <!--[CHAR LIMIT=30 / BOTH MUST HAVE SIMILAR LENGTH]-->
    <string name="pointGame">Point-based game</string>
    <string name="gameGame">Game-based game</string>
    <!--[NO TRANSLATION]-->
    <string name="pointGameExample" translatable="false">\n(Escoba)</string>
    <string name="gameGameExample" translatable="false">\n(Brisca, Tute&#8230;)</string>
    <!--[CHAR LIMIT=12]-->
    <string name="pointGameTitle">Points game</string>
    <string name="gameGameTitle">Games game</string>

    <!--[CHAR LIMIT=NONE]-->
    <string name="suggestions">Do you have any suggestions?</string>
    <string name="contact">Please contact us</string>

    <!--Hint strings [CHAR LIMIT=8]-->
    <string name="player1Hint">Player1</string>
    <string name="player2Hint">Player2</string>
    <string name="player3Hint">Player3</string>
    <string name="player4Hint">Player4</string>
    <!--[CHAR LIMIT=NONE]-->
    <string name="enterPointsHint" translatable="false">0</string>
    <string name="cabronInitial" translatable="false">-</string>

    <!--Goal strings [NO TRANSLATE]-->
    <string name="goal5" translatable="false">5</string>
    <string name="goal10" translatable="false">10</string>
    <string name="goal20" translatable="false">20</string>
    <string name="goal30" translatable="false">30</string>
    <string name="goal40" translatable="false">40</string>

    <!--Reclosures strings [NO TRANSLATE]-->
    <string name="reclosure0" translatable="false">0</string>
    <string name="reclosure1" translatable="false">1</string>
    <string name="reclosure2" translatable="false">2</string>
    <string name="reclosure3" translatable="false">3</string>

    <!--Content Description strings [CHAR LIMIT=NONE]-->
    <string name="avatar1">Avatar for Player 1</string>
    <string name="avatar2">Avatar for Player 2</string>
    <string name="avatar3">Avatar for Player 3</string>
    <string name="avatar4">Avatar for Player 4</string>
    <string name="add3">Add Player 3</string>
    <string name="add4">Add Player 4</string>
    <string name="enterPoints">Enter points button</string>

    <!--Messages strings [CHAR LIMIT=NONE]-->
    <string name="woohoo">Woohoo!</string>
    <string name="congratulations">has won! Congratulations</string>
    <string name="ohno">Oh no!</string>
    <string name="defeated">has been defeated!</string>
    <string name="reclose">has lost. Do you want to reclose?</string>

</resources>
