<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/selectPlayersText"
        style="@style/CenteredText"
        android:layout_margin="@dimen/marginNormal"
        android:text="@string/selectPlayers"
        android:textColor="@color/primaryDarkText"
        android:textSize="@dimen/subheadSize" />

    <LinearLayout
        style="@style/LinearLayoutBottomSheet">

        <Spinner
            android:id="@+id/playerIcon1Spinner"
            style="@style/PlayerAvatar" />

        <EditText
            android:id="@+id/playerName1"
            style="@style/PlayerEditText"
            android:hint="@string/player1Hint" />

        <ViewFlipper
            android:id="@+id/viewFlipper3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/playerButton3"
                style="@style/AddPlayer"
                android:contentDescription="@string/add3" />

            <Spinner
                android:id="@+id/playerIcon3Spinner"
                style="@style/PlayerAvatar"
                android:layout_marginLeft="@dimen/marginBig" />

        </ViewFlipper>

        <EditText
            android:id="@+id/playerName3"
            style="@style/PlayerEditText"
            android:hint="@string/player3Hint"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        style="@style/LinearLayoutBottomSheet">

        <Spinner
            android:id="@+id/playerIcon2Spinner"
            style="@style/PlayerAvatar" />

        <EditText
            android:id="@+id/playerName2"
            style="@style/PlayerEditText"
            android:hint="@string/player2Hint" />

        <ViewFlipper
            android:id="@+id/viewFlipper4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/playerButton4"
                style="@style/AddPlayer"
                android:contentDescription="@string/add4" />

            <Spinner
                android:id="@+id/playerIcon4Spinner"
                style="@style/PlayerAvatar"
                android:layout_marginLeft="@dimen/marginBig" />

        </ViewFlipper>

        <EditText
            android:id="@+id/playerName4"
            style="@style/PlayerEditText"
            android:hint="@string/player4Hint"
            android:visibility="invisible" />

    </LinearLayout>

    <TextView
        android:id="@+id/selectGoalText"
        style="@style/CenteredText"
        android:layout_margin="@dimen/marginNormal"
        android:text="@string/selectGoal"
        android:textColor="@color/primaryDarkText"
        android:textSize="@dimen/subheadSize" />

    <LinearLayout
        android:id="@+id/goalLine"
        style="@style/LinearLayoutBottomSheet"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/marginBig"
            android:src="@drawable/ic_target"
            tools:ignore="contentDescription" />

        <RadioGroup
            android:id="@+id/goal_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/goal5_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/goal5" />

            <RadioButton
                android:id="@+id/goal10_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal10" />

            <RadioButton
                android:id="@+id/goal20_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal20" />

            <RadioButton
                android:id="@+id/goal30_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal30" />

            <RadioButton
                android:id="@+id/goal40_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal40" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/selectReclosuresText"
        style="@style/CenteredText"
        android:layout_margin="@dimen/marginNormal"
        android:text="@string/selectReclosures"
        android:textColor="@color/primaryDarkText"
        android:textSize="@dimen/subheadSize"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/reclosuresLine"
        style="@style/LinearLayoutBottomSheet"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/marginBig"
            android:src="@drawable/ic_plug"
            tools:ignore="contentDescription" />

        <RadioGroup
            android:id="@+id/reclosure_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/reclosure0_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/reclosure0" />

            <RadioButton
                android:id="@+id/reclosure1_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reclosure1" />

            <RadioButton
                android:id="@+id/reclosure2_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reclosure2" />

            <RadioButton
                android:id="@+id/reclosure3_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reclosure3" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/marginNormal"
        android:text="@string/nextButton"
        android:textColor="@color/primaryLightText" />
</LinearLayout>